--- a/themes/melody/_config.yml
+++ b/themes/melody/_config.yml
@@ -205,13 +205,13 @@ disqus:
 # client_id:
 # client_secret:
 
-# gitalk:
-#   enable: false
-#   client_id:
-#   client_secret:
-#   repo:
-#   owner:
-#   admin:
+gitalk:
+   enable: true
+   client_id: 72a672ddfc6e3a4fecca
+   client_secret: 3d9d7e44e8177b0b25c584f878bf463b842cf240
+   repo: https://github.com/spaceack/spaceack.github.io
+   owner: spaceack
+   admin: spaceack
 
 # valine comment system. https://valine.js.org
 # valine:
