--- a/themes/hexo3/_config.yml
+++ b/themes/hexo3/_config.yml
@@ -278,4 +278,6 @@ CDN:
   photoswipe_ui_js: //cdn.bootcss.com/photoswipe/4.1.2/photoswipe-ui-default.min.js
   photoswipe_css: //cdn.bootcss.com/photoswipe/4.1.2/photoswipe.min.css
   photoswipe_skin_css: //cdn.bootcss.com/photoswipe/4.1.2/default-skin/default-skin.min.css
+  aplayer_css: https://cdn.bootcss.com/aplayer/1.10.1/APlayer.min.css
+  aplayer_js: https://cdn.bootcss.com/aplayer/1.10.1/APlayer.min.js
 ##############################
