--- a/themes/hexo3/_config.yml
+++ b/themes/hexo3/_config.yml
@@ -80,7 +80,7 @@ bottom_text: ©2014-2020 Spaceack
 # 自定义页面最下方的站点版权信息
 # 如果不填，则自定义为 ©2017 author (这个author为hexo根目录_config.yml中配置的)
 
-reward: false
+reward: true
 # true 开启打赏功能
 
 searchAll: false
