--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: hexo3
+theme: tree
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
