--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ highlight:
 index_generator:
   path: ''
   per_page: 10
-  order_by: -date
+  order_by: date
 
 # Category & Tag
 default_category: uncategorized
@@ -91,7 +91,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: tree
+theme: melody
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
