--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: node_js # 声明环境为node
-node_js: 14.0.0
+node_js: stable
 
 # Travis-CI Caching
 cache:
   directories:
-    - node_modules # 缓存node_modules文件夹
+    - npm # 缓存node_modules文件夹
 
 # S: Build Lifecycle
 install:
