--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: node_js # 声明环境为node
-node_js: stable
+node_js: 
+  - 12
 
 # Travis-CI Caching
-cache:
-  directories:
-    - npm # 缓存node_modules文件夹
+
 
 # S: Build Lifecycle
 install:
