--- a/source/_data/melody.yml
+++ b/source/_data/melody.yml
@@ -134,7 +134,7 @@ cdn:
 # ---------------
 avatar: /img/avatar.jpg
 
-top_img: true # false or url of img
+top_img: false # false or url of img
 
 top_img_height: 60 # best range: 60 - 100
 
